--- a/my-app/netlify.toml
+++ b/my-app/netlify.toml
@@ -1,10 +1,11 @@
 [build]
   base = "my-app"
-  command = "npm run build"
+  command = "npm install --legacy-peer-deps && npm run build"
   publish = "dist"
 
 [build.environment]
-  NODE_VERSION = "20"
+  NODE_VERSION = "20.19.2"
+  NPM_FLAGS = "--legacy-peer-deps"
 
 [[redirects]]
   from = "/*"
