--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "framer-motion": "^11.0.8"
+    "framer-motion": "^11.0.8",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
